<resources>
    <string name="app_name">BuddyIN</string>

    <string name="login">Login Page</string>
    <string name="email">Email Address :</string>
    <string name="password">Password :</string>
    <string name="log_in">Log In</string>
    <string name="create_a_new_account"><u>Create A New Account?</u></string>
    <string name="forget_password"><u> Forget Password? </u></string>
    <string name="confirm_password">Confirm Password :</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account"><u> Already Have An Account? </u></string>
    <string name="home">Home</string>
    <string name="buddy">Buddy</string>
    <string name="chatbot">Chatbot</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="personal_information">Personal Information</string>
    <string name="hobbies">Hobbies</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="gender">Gender</string>
    <string name="course_studied">Course Studied</string>
    <string name="seniority_example_year_1">Seniority(Example :Year 1)</string>
    <string name="personalities">Personalities</string>
    <string name="nationality">Nationality</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the Terms and Conditions</string>
    <string name="i_agree_to_the">I agree to the</string>
    <string name="terms_and_conditions"> <u>Terms and Conditions</u></string>
    <string name="register">Register</string>
    <string name="age">Age</string>
    <string name="notes_by_subject">Notes By Subject</string>
    <string name="xxxxx">xxxxx</string>
    <string name="this_is_a_post">This is a post</string>
    <string name="_5002cem">5002CEM</string>
    <string name="buddy_chat">Buddy Chat</string>
    <string name="buddy_list">Buddy List</string>
    <string name="edit">Edit</string>
    <string name="enter_text">Enter Text</string>
    <string name="click_here_to_upload_an_image">Click here to upload an image</string>
    <string name="loading">Loading...</string>
    <string name="post">Post</string>
    <string name="notes">Notes</string>
    <string name="log_out">Log Out</string>
    <string name="enter_title">Enter Title</string>
    <string name="view_all">View All</string>
    <string name="no_buddies_yet">No Buddies Yet 😭</string>
    <string name="_10_10_am">10:10 AM</string>
    <string name="chat">Chat</string>

    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="pending_lecturer">Pending Lecturer</string>
    <string name="approved_lecturer">Approved Lecturer</string>
    <string name="rejected_lecturer">Rejected Lecturer</string>
    <string name="upload">Upload</string>
    <string name="search">Search</string>
    <string name="no_results">No Results</string>
    <string name="buddy_request">Buddy Request</string>
    <string name="_99">99+</string>
    <string name="menu_refresh">"Refresh "</string>
    <string name="no_buddy_request">No Buddy Request</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>

</resources>