<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_pending"
            android:title="@string/pending_lecturer"/>
        <item
            android:id="@+id/drawer_viewlecture"
            android:title="@string/approved_lecturer"/>
        <item
            android:id="@+id/drawer_rejectlecture"
            android:title="@string/rejected_lecturer"/>
        <item
            android:id="@+id/drawer_post"
            android:title="@string/post"/>
        <item
            android:id="@+id/drawer_notes"
            android:title="@string/notes"/>
        <item
            android:id="@+id/drawer_profile"
            android:title="@string/profile"/>
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/baseline_logout_24"
                android:title="@string/log_out"/>
        </menu>
    </item>

</menu>