<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".lecturer.LecturerProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/profile_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/purple"
            android:elevation="0dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/logout"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            app:srcCompat="@drawable/baseline_logout_24"
            android:contentDescription="@string/log_out"
            android:backgroundTint="@android:color/transparent"
            android:scaleType="fitXY"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/hlinear"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@color/purple"
            app:layout_constraintTop_toBottomOf="@id/profile_toolbar">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profileImage"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/lr_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/roundedImageViewRounded"/>

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/xxxxx"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintEnd_toStartOf="@+id/edit_pro_btn"
                app:layout_constraintStart_toEndOf="@+id/profileImage"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <Button
                android:id="@+id/edit_pro_btn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/pink_btn"
                android:elevation="20dp"
                android:shadowColor="@color/black"
                android:text="@string/edit"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/line_seperator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_marginTop="90dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/hlinear" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/profiletab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line_seperator">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notes" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/profile_vpager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@string/profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profiletab" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>