<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@drawable/lr_background">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="TODO"
            app:srcCompat="@drawable/vertical_transparent_logo"
            tools:ignore="ContentDescription,HardcodedText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="@id/logo"
            android:gravity="start"
            android:text="@string/email"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailinput"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                android:layout_marginBottom="15dp"
                android:background="@color/pink_box"
                android:hint="email@gmail.com"
                android:textColorHint="#5C6BC0"
                tools:ignore="HardcodedText" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="@id/emailinput"
            android:gravity="start"
            android:text="@string/password"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordinput"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                android:layout_marginBottom="10dp"
                android:background="@color/pink_box"
                android:hint="Password"
                android:textColorHint="#AB47BC"
                tools:ignore="HardcodedText" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/forgetPasswordbtn"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="15dp"
            android:background="@color/transparent"
            android:textAlignment="viewStart"
            android:text="@string/forget_password"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/loginbtn"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/red_btn"
            android:shadowColor="@color/black"
            android:text="@string/log_in"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:padding="10dp"
            android:elevation="20dp"/>

        <Button
            android:id="@+id/createAccbtn"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="5dp"
            android:background="@color/transparent"
            android:shadowColor="@color/black"
            android:text="@string/create_a_new_account"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="TextSizeCheck" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>